--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "test",
     "tests"
   ],
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/AlexaDeWit/purescript-base64-codec.git"
+  },
   "dependencies": {
     "purescript-prelude": "^4.0.0",
     "purescript-spec": "^3.0.0",
