--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,12 @@
   },
   "dependencies": {
     "purescript-prelude": "^4.0.0",
-    "purescript-spec": "^3.0.0",
     "purescript-arraybuffer-types": "^2.0.0",
     "purescript-arraybuffer": "^7.0.0",
-    "purescript-uint": "^4.0.0"
   },
  "devDependencies": {
     "purescript-debug": "^4.0.0",
-    "purescript-quickcheck": "^5.0.0"
+    "purescript-quickcheck": "^5.0.0",
+    "purescript-spec": "^3.0.0"
   }
 }
