Fix license info

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Alexandra DeWit"
   ],
-  "license": "MIT",
+  "license": "Unlicense",
   "homepage": "",
   "ignore": [
     "**/.*",
