--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "purescript-prelude": "^4.0.0",
-    "purescript-arraybuffer-types": "^2.0.0",
-    "purescript-arraybuffer": "^8.0.0"
+    "purescript-arraybuffer-types": "^2.0.0"
   },
  "devDependencies": {
+    "purescript-arraybuffer": "^8.0.0",
     "purescript-debug": "^4.0.0",
     "purescript-quickcheck": "^5.0.0",
     "purescript-spec": "^3.0.0"
