--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs": "pulp docs && cp generated-docs/Data/Base64.md README.md"
   },
   "devDependencies": {
+    "text-encoding": "^0.6.4",
     "pulp": "^12.3.0",
     "purescript": "^0.12.0",
     "purescript-psa": "^0.6.0"
